--- a/appli1/src/main/res/layout/activity_main.xml
+++ b/appli1/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Btn1"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="461dp" />
 
